# pulse

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: Dockerfile  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 07c2dc252310_add_release_events_table.py  1691c8174801_add_events_table.py  32a6a15ed0d2_add_sentiments_table.py  5099a2f34ecc_week1_initial_schema_models_posts_post_.py  b7f3a2c91e04_add_themes_table.py  c8d1e2f3a4b5_add_trending_keywords.py  d9e2f3a4b5c6_add_translations.py  e1f2a3b4c5d6_add_evaluation_runs.py  f3a4b5c6d7e8_add_source_and_confident_indexes.py
api/api/: config.py  database.py  main.py  middleware.py
api/api/models/: __init__.py  evaluation.py  event.py  mixins.py  models.py  posts.py  release.py  sentiment.py  theme.py  translation.py  trending.py
api/api/routers/: collection.py  corpus.py  dashboard.py  decide.py  events.py  events_today.py  feed.py  health.py  metrics.py  models.py  releases.py  storylines.py
api/api/services/: _batch.py  _quality.py  corpus.py  dashboard.py  decide.py  events.py  feed.py  model_detail.py  models.py  posts.py  recency.py  releases.py  sentiments.py  themes.py  translations.py  trending.py
api/tests/: test_batch_invariants.py  test_corpus.py  test_dashboard_trends.py  test_decide.py  test_error_responses.py  test_events_integration.py  test_events_today.py  test_feed.py  test_model_detail.py  test_models_dashboard.py  test_releases_integration.py  test_schema.py  test_storylines.py  test_upsert_integration.py
design-system/: README.md
design-system/components/: buttons.html  event-card.html  favorite-button.html  feed-card.html  filter-bar.html  source-badges.html  theme-chips.html
design-system/foundations/: colors.html  semantic-colors.html  spacing.html  typography.html
design-system/patterns/: longform-reading.html  mobile-header.html  states.html  today-layout.html
docs/: MENTOR_REPLY.md  PROJECT_PLAN.md  Pulse_Project_Plan_v4.docx  TASKS.md  annotation-codebook-100.md  annotation-guidelines.md  architecture.md  bakeoff-theme-report-r2.md  bakeoff-theme-report-r3.md  bakeoff-theme-report.md  case-study-faithful-event-summarizer.md  competitor-analysis.md  corpus-report.md  evaluation-report-template.md  keyword-extraction.md  lessons-learned.md  optimization-prompt.md  pipeline-composition.md
docs/decisions/: 001-monorepo.md  002-docker-compose-db.md  003-sqlalchemy.md  (+8 more)
ml/: README.md  pyproject.toml
ml/ml/: annotation.py  charts.py  collection_pack.py  data_quality.py  dedup.py  distill.py  event_cluster.py  event_detection.py  event_pipeline.py  faithfulness.py  hotness.py  jsonlio.py  keywords.py  metrics.py  newsletter.py  sentiment.py  silver_summaries.py  summarize.py  summary_eval.py  theme.py  translate.py
ml/tests/: test_annotation.py  test_charts.py  test_collection_pack.py  test_data_quality.py  test_dedup.py  test_distill.py  test_distill_async.py  test_event_cluster.py  test_event_detection.py  test_event_pipeline.py  test_event_pipeline_integration.py  test_faithfulness.py  test_hotness.py  test_keywords.py  test_metrics.py  test_metrics_regression.py  test_newsletter.py  test_scripts_pure.py  test_sentiment.py  test_silver_summaries.py  test_storyline_core.py  test_summarize.py  test_summary_eval.py  test_theme.py  test_translate.py
scripts/: _bakeoff_train.sh  _bakeoff_train_ml.sh  _bakeoff_train_r3.sh  annotate.py  annotate_chat.py  backfill.py  backfill_keywords.py  backfill_sentiments.py  backfill_themes.py  backfill_threads_clean.py  backfill_translations.py  build_silver_summaries.py  build_storylines.py  build_today_events.py  bulk_backfill.py  check_dataflow.py  corpus_report.py  crawl_facebook.py  crawl_ptt.py  daily_refresh.ps1  distill_labels.py  evaluate.py  evaluate_summaries.py  export_silver.py  fetch_releases.py  md_to_docx.py  prototype_storyline.py  run_dqc.py  run_event_detection.py  run_event_pipeline.py  seed_models.py  send_newsletter.py  setup.sh  storyline_core.py  summarize_events.py  test_crawl.py  threads_accumulate.ps1  train_classifier.py  train_summarizer.py  try_threads.py
web/: .env.example  .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
workers/: Dockerfile.airflow  README.md  pyproject.toml
workers/ca-certs/: README.md
workers/crawlers/: __init__.py  _http.py  devto.py  github.py  hackernews.py  huggingface.py  keywords.py  lobsters.py  reddit.py  threads.py  threads_clean.py  twitter.py
workers/dags/: _callbacks.py  _common.py  _datasets.py  crawl_community_dag.py  crawl_hackernews_dag.py  crawl_reddit_dag.py  crawl_threads_dag.py  crawl_x_dag.py  data_quality_dag.py  event_detection_dag.py  fetch_releases_dag.py
workers/pipeline/: __init__.py  crawl.py  events.py  quality.py
workers/plugins/: truststore_init.py
workers/tests/: test_crawler_keywords.py  test_devto_crawler.py  test_github_crawler.py  test_hackernews_crawler.py  test_hf_crawler.py  test_lobsters_crawler.py  test_reddit_crawler.py  test_threads_clean.py  test_threads_crawler.py  test_twitter_crawler.py
(+110 files in other folders)
