[project]
name = "pulse-api"
version = "0.1.0"
description = "Pulse FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",  # alembic sync 用
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    # ML
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.2",
    "bertopic>=0.16.0",
    # LLM
    "anthropic>=0.18.0",
    # Reddit
    "praw>=7.7.0",
    "asyncpraw>=7.7.0",
    # HTTP
    "httpx>=0.26.0",
    # Utils
    "tenacity>=8.2.0",
    "python-json-logger>=2.0.0",
    # Monitoring
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI 慣例：Depends/Query/... 放在參數預設值是正確用法，不該觸發 B008。
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
