[project]
name = "pulse-ml"
version = "0.1.0"
description = "Pulse ML pipeline (sentiment, topic, event detection)"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.2",
    "bertopic>=0.16.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "mlflow>=2.10.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml"]

[tool.ruff]
line-length = 100
target-version = "py311"
