[project]
name = "pulse-workers"
version = "0.1.0"
description = "Pulse Airflow DAGs + crawlers + DQC + ML pipelines"
requires-python = ">=3.11"
dependencies = [
    # 注意：實際在 Airflow Docker container 內跑時，這些是給本機開發測試用
    # production 環境 Airflow 用自己的 image
    "apache-airflow>=2.9.0",

    # Crawlers
    "praw>=7.7.0",
    "asyncpraw>=7.7.0",
    "httpx>=0.26.0",
    "truststore>=0.9.0",  # 用 OS 信任庫，避開企業 TLS 攔截的憑證問題
    "selenium>=4.20.0",  # Threads 爬蟲（best-effort plugin，瀏覽器自動化）

    # DQC (v4 新增)
    "lingua-language-detector>=2.0.0",  # 比 langdetect 準

    # DB
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",

    # Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",

    # Utils
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dags", "plugins", "pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"
